.sisyphus/evidence/task-6-codegen-new-syntax.txt
Command: cargo test new_bytes_codegen_calls_bytes_new
Status: blocked by unrelated pre-existing test compile failures before target test execution.

Output:
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on build directory
   Compiling opalescent v0.1.0 (/home/justi/Projects/opalescent)
error[E0026]: variant `ast::Stmt::Let` does not have a field named `type_annotation`
    --> src/parser/tests.rs:6143:9
     |
6143 |         type_annotation,
     |         ^^^^^^^^^^^^^^^ variant `ast::Stmt::Let` does not have this field

error[E0026]: variant `ast::Stmt::Let` does not have a field named `type_annotation`
    --> src/parser/tests.rs:6181:9
     |
6181 |         type_annotation,
     |         ^^^^^^^^^^^^^^^ variant `ast::Stmt::Let` does not have this field

For more information about this error, try `rustc --explain E0026`.
error: could not compile `opalescent` (lib test) due to 2 previous errors
